add some more materials (click for more) 1. added more scintillator types 2. add helper function to pick correct material key based upon configuration file

--- a/include/materials/CMakeLists.txt
+++ b/include/materials/CMakeLists.txt
@@ -8,4 +8,6 @@ target_sources(${EXC_OUT}
         QuartzProperties.hh
         SiProperties.hh
         TeflonProperties.hh
+        LYSOProperties.hh
+        GaGGProperties.hh
 )
