add light guide and SiPMs

--- a/include/materials/CMakeLists.txt
+++ b/include/materials/CMakeLists.txt
@@ -11,4 +11,5 @@ target_sources(${EXC_OUT}
         LYSOProperties.hh
         GaGGProperties.hh
         ESRProperties.hh
+        PDMSProperties.hh
 )
