add new include to make the GlobalConfigs portable

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources(${EXC_OUT}
     PRIVATE
         ActionInitialization.hh
         Analysis.hh
+        ConfigCustomization.hh
         CrystalHit.hh
         CrystalSensitiveDetector.hh
         DetectorConstruction.hh
