--- a/import-capable/CMakeLists.txt
+++ b/import-capable/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
 set(CMAKE_CXX_STANDARD 20)
-project(basic-optics)
+project(cadmesh-wrapper)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
@@ -12,7 +12,7 @@ add_subdirectory(src)
 
 find_package(nlohmann_json REQUIRED)
 target_link_libraries(
-    basic-optics
+    cadmesh-wrapper
     ${Geant4_LIBRARIES}
     tet
     nlohmann_json::nlohmann_json
